--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -31,6 +31,7 @@ textarea{overflow:auto;vertical-align:top;}
 .bg-color-purple{background-color:#603cba !important;}
 .bg-color-darken{background-color:#1c1c1c !important;}
 .bg-color-white{background-color:#ffffff !important;}
+.bg-color-blueOwncloud{background-color:#35537A !important;}
 .metro *{font-family:Tahoma,Arial,Verdana,sans-serif;font-size:11pt;font-weight:400;color:#ffffff;}
 .metro a:hover,.metro .link:hover{color:#44d1da;}
 .metro a:active,.metro .link:active{color:#52ecff;}
