adjust background image

--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -366,7 +366,7 @@ html, body {
 
     
 body {
-	background: url(/droptiles/wl.jpg) no-repeat center center fixed;
+	background: url(/droptiles/bg2.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
