--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -17,8 +17,15 @@ button,input,select,textarea{margin:0;font-size:100%;vertical-align:middle;}
 button,input{*overflow:visible;line-height:normal;}
 button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0;}
 button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button;}
-input[type="search"]{-webkit-appearance:textfield;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;}
-input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none;}
+input[type="search"]{
+	-webkit-appearance:textfield;
+	-webkit-box-sizing:content-box;
+	-moz-box-sizing:content-box;
+	box-sizing:content-box;
+}
+input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button{
+	-webkit-appearance:none;
+}
 textarea{overflow:auto;vertical-align:top;}
 .bg-color-blue{background-color:#2d89f0 !important;}
 .bg-color-blueDark{background-color:#0064cd !important;}
@@ -366,7 +373,7 @@ html, body {
 
     
 body {
-	background: url(/bg2.jpg) no-repeat center center fixed;
+	background: url(/droptiles/bg2.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -560,6 +567,25 @@ border: 1px solid #AAAAAA;
     }
 
 .theme-Modern {
-        background-image: url("/bild.jpg");
-        background-repeat: repeat;    
+	background: url(/droptiles/bild.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
+
+.theme-Forest {
+        background: url(/droptiles/forest.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover; 
+        -moz-background-size: cover;
+        -o-background-size: cover;  
+        background-size: cover;
+}
+
+.theme-Flower {
+        background: url(/droptiles/flower.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover; 
+        -moz-background-size: cover;
+        -o-background-size: cover;  
+        background-size: cover;
 }
