--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -377,7 +377,7 @@ html, body {
 
     
 body {
-	background: url(/droptiles/bg2.jpg) no-repeat center center fixed;
+	background: url(/droptiles/img/wallpapers/moos.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
