--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -578,8 +578,24 @@ border: 1px solid #AAAAAA;
         background-size: cover;
 }
 
+.theme-Caturday{
+	background: url("http://akk.li/pics/anne.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover; 
+        -moz-background-size: cover;
+        -o-background-size: cover;  
+        background-size: cover;
+}
+
 .theme-NG-pl {
         background: url("http://meinecloud.me/droptiles-beta/plugins/ng/national-geographic-photo-of-the-day/ng_daily_image.jpg?1426337429413") no-repeat center center fixed;
+        -webkit-background-size: cover; 
+        -moz-background-size: cover;
+        -o-background-size: cover;  
+        background-size: cover;
+}
+
+.theme-NASA-pl{
+	background: url("http://meinecloud.me/droptiles/scripts/nasa/64d900721448875bde82/nasa_picture_of_the_day_apod.jpg") no-repeat center center fixed;
         -webkit-background-size: cover; 
         -moz-background-size: cover;
         -o-background-size: cover;  
