--- a/css/droptiles.css
+++ b/css/droptiles.css
@@ -382,6 +382,7 @@ body {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+	overflow: hidden;
     }
 
 .appstore {
